--- a/packages/core-vue2/tsconfig.json
+++ b/packages/core-vue2/tsconfig.json
@@ -14,7 +14,8 @@
     "baseUrl": ".",
     "types": [
       "webpack-env",
-      "jest"
+      "jest",
+      "node"
     ],
     "paths": {
       "@/*": [
@@ -29,6 +30,7 @@
     ]
   },
   "include": [
+    "env.d.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
