--- a/packages/react-umi/package.json
+++ b/packages/react-umi/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "name": "react-umi",
   "scripts": {
     "start": "umi dev",
     "build": "umi build",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "lodash": "^4.17.21",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.34"
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@umijs/plugin-qiankun": "^2.40.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.34",
     "lint-staged": "^10.0.7",
