--- a/packages/react18/package.json
+++ b/packages/react18/package.json
@@ -12,10 +12,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cross-env PORT=8005 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +36,6 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "react-app-rewired": "^2.2.1"
   }
 }
