--- a/packages/core-react18-vite/package.json
+++ b/packages/core-react18-vite/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "fast-deep-equal": "^3.1.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
