--- a/packages/core-react18/package.json
+++ b/packages/core-react18/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "fast-deep-equal": "^3.1.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/testing-library__jest-dom": "^5.14.5"
   }
 }
