--- a/packages/core-react18/package.json
+++ b/packages/core-react18/package.json
@@ -13,6 +13,7 @@
     "fast-deep-equal": "^3.1.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "qiankun": "^2.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
