--- a/packages/core-react18/package.json
+++ b/packages/core-react18/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "dayjs": "^1.11.6",
     "fast-deep-equal": "^3.1.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
