--- a/packages/vue2/package.json
+++ b/packages/vue2/package.json
@@ -46,7 +46,8 @@
     "sass-loader": "^8.0.2",
     "tslib": "^2.4.0",
     "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.0.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
