--- a/packages/core-vue2-vite/package.json
+++ b/packages/core-vue2-vite/package.json
@@ -13,35 +13,35 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "pinia": "^2.0.16",
-    "vue": "^2.7.7",
-    "vue-router": "^3.5.4",
-    "qiankun": "^2.7.4"
+    "pinia": "^2.1.7",
+    "qiankun": "^2.10.15",
+    "vue": "^2.7.15",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@types/jsdom": "^16.2.14",
-    "@types/node": "^16.11.45",
-    "@vitejs/plugin-legacy": "^2.0.0",
+    "@rushstack/eslint-patch": "^1.5.1",
+    "@types/jsdom": "^16.2.15",
+    "@types/node": "^16.18.60",
+    "@vitejs/plugin-legacy": "^2.3.1",
     "@vitejs/plugin-vue2": "^1.1.2",
-    "@vitejs/plugin-vue2-jsx": "^1.0.2",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^1.3.0",
+    "@vitejs/plugin-vue2-jsx": "^1.1.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^1.3.6",
     "@vue/tsconfig": "^0.1.3",
-    "cypress": "^10.3.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.0.0",
-    "jsdom": "^20.0.0",
+    "cypress": "^10.11.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-vue": "^9.18.1",
+    "jsdom": "^20.0.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
-    "start-server-and-test": "^1.14.0",
-    "terser": "^5.14.2",
+    "prettier": "^2.8.8",
+    "start-server-and-test": "^1.15.4",
+    "terser": "^5.24.0",
     "typescript": "~4.7.4",
-    "vite": "^3.0.2",
+    "vite": "^3.2.7",
     "vitest": "^0.18.1",
-    "vue-template-compiler": "^2.7.7",
-    "vue-tsc": "^0.38.8"
+    "vue-template-compiler": "^2.7.15",
+    "vue-tsc": "^0.38.9"
   }
 }
