--- a/packages/react-umi/package.json
+++ b/packages/react-umi/package.json
@@ -23,19 +23,19 @@
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
     "lodash": "^4.17.21",
-    "react": "17.x",
-    "react-dom": "17.x",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "umi": "^3.5.34"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@umijs/plugin-qiankun": "^2.40.0",
-    "@umijs/preset-react": "1.x",
-    "@umijs/test": "^3.5.34",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.0",
-    "typescript": "^4.1.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@umijs/plugin-qiankun": "^2.44.1",
+    "@umijs/preset-react": "~1.8.32",
+    "@umijs/test": "^3.5.41",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.8.8",
+    "typescript": "^4.9.5",
     "yorkie": "^2.0.0"
   }
 }
