--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -10,18 +10,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "register-service-worker": "^1.7.1",
-    "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "core-js": "^3.33.2",
+    "register-service-worker": "^1.7.2",
+    "vue": "^3.3.8",
+    "vue-class-component": "8.0.0-rc.1",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@types/node": "^16.11.47",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^16.18.60",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "@vue/cli-plugin-babel": "~4.5.19",
     "@vue/cli-plugin-e2e-cypress": "~4.5.19",
     "@vue/cli-plugin-eslint": "~4.5.19",
@@ -31,22 +31,22 @@
     "@vue/cli-plugin-unit-jest": "~4.5.19",
     "@vue/cli-plugin-vuex": "~4.5.19",
     "@vue/cli-service": "~4.5.19",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.3.8",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
+    "@vue/test-utils": "^2.4.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-vue": "^7.20.0",
     "lint-staged": "^9.5.0",
-    "sass": "^1.26.5",
+    "sass": "^1.69.5",
     "sass-loader": "^8.0.2",
-    "tslib": "^2.4.0",
-    "typescript": "~4.1.5",
-    "vue-jest": "^5.0.0-0"
+    "tslib": "^2.6.2",
+    "typescript": "~4.1.6",
+    "vue-jest": "5.0.0-alpha.10"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
