--- a/packages/core-vue3-vite/package.json
+++ b/packages/core-vue3-vite/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
     "qiankun": "^2.10.15",
     "vue": "^3.3.8",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.5.1",
     "@types/jsdom": "^20.0.1",
+    "@types/lodash-es": "^4.17.10",
     "@types/node": "^16.18.60",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
