--- a/packages/core-vue2-vite/package.json
+++ b/packages/core-vue2-vite/package.json
@@ -1,16 +1,11 @@
 {
   "name": "core-vue2-vite",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview --port 4173",
-    "test:unit": "vitest --environment jsdom",
-    "test:e2e": "start-server-and-test preview http://localhost:4173/ 'cypress open --e2e'",
-    "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -19,29 +14,10 @@
     "vue-router": "^3.6.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.5.1",
-    "@types/jsdom": "^16.2.15",
     "@types/node": "^16.18.60",
-    "@vitejs/plugin-legacy": "^2.3.1",
-    "@vitejs/plugin-vue2": "^1.1.2",
-    "@vitejs/plugin-vue2-jsx": "^1.1.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^1.3.6",
-    "@vue/tsconfig": "^0.1.3",
-    "cypress": "^10.11.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-vue": "^9.18.1",
-    "jsdom": "^20.0.3",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
-    "start-server-and-test": "^1.15.4",
-    "terser": "^5.24.0",
-    "typescript": "~4.7.4",
-    "vite": "^3.2.7",
-    "vitest": "^0.18.1",
-    "vue-template-compiler": "^2.7.15",
-    "vue-tsc": "^0.38.9"
+    "@vitejs/plugin-vue2": "^2.2.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vue-tsc": "^1.8.5"
   }
 }
